# g3e-neon-sve-benchmarks

./: .gitignore  CMakeLists.txt  benchmark.sh
FirstGBenchmarkTest/: CMakeLists.txt  main.cpp
benchmark_driver/: CMakeLists.txt  accumulate_benchmark.h  benchmark_common.h  driver_common.h  hello_benchmark.h  hello_kernel.h  intersectP_benchmark.h  main.cpp  maxOps_benchmark.h  memcmp_benchmark.h  memcmp_kernel.h  memcpy_benchmark.h  memset_benchmark.h  murmur3_32_benchmark.h  murmur64A_benchmark.h  nBody_step_benchmark.h  vectorLoadFactor_benchmark.h
common/: constants.h  random_data_generator.h  types.h
kernels/: CMakeLists.txt
kernels/neon/: CMakeLists.txt  accumulate.cpp  hello.cpp  intersectP.cpp  maxOps.cpp  memcmp.cpp  memcmpNeon.cpp  memcpy.cpp  memset.cpp  murmur3_32.cpp  murmur64A.cpp  nBody_step.cpp  neon_common.h  neon_kernels.h
kernels/reference/: CMakeLists.txt  accumulate.cpp  helloReference.cpp  intersectP.cpp  memcmpReference.cpp  memcpy.cpp  memset.cpp  murmur3_32.cpp  murmur64A.cpp  nBody_step.cpp  reference_common.h  reference_kernels.h
kernels/sve/: CMakeLists.txt  accumulate.cpp  hello.cpp  intersectP.cpp  maxOps.cpp  memcmp.cpp  memcmpSVE.cpp  memcpy.cpp  memset.cpp  murmur3_32.cpp  murmur64A.cpp  nBody_step.cpp  sve_common.h  sve_kernels.h  vectorLoadFactor.cpp
test_driver/: CMakeLists.txt  accumulate_test.cpp  hello_test.cpp  intersectP_test.cpp  memcmp_test.cpp  memcpy_test.cpp  memset_test.cpp  murmur3_32_test.cpp  murmur64A_test.cpp  nBody_test.cpp  test_common.h
